current delauney navmesh has various issues e.g. too coarse and steiner points don't mitigate (without further hacks). decided upon new approach i.e. since navigable polygon is rectilinear we can use an optimal covering by rectangles.

--- a/components/variables.scss
+++ b/components/variables.scss
@@ -17,7 +17,7 @@ $level-wall-dark: white;
 $level-navigable-light: #eee;
 $level-navigable-dark: #222;
 
-$level-triangle-light: rgba(200, 200, 200, 0.5);
+$level-triangle-light: rgba(200, 200, 200, 1);
 $level-triangle-dark: #444;
 
 $level-grid-light: rgba(0, 0, 0, 0.5);
